# SteamIdlerEnhanced

./: BUILD_STATUS.md  CMakeLists.txt  COMPLETION_SUMMARY.md  FEATURES.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  build_portable.ps1  installer_script.iss  migrate.py  rebuild.bat  resources.qrc  resources.rc
.github/: copilot-instructions.md
assets/: style.qss
data/: session_history.db
data/lang/: fr.json  ru.json  zh.json
include/: AppConfig.h  Categories.h  CategoriesPanel.h  DllLoader.h  GameBrowser.h  GameSearch.h  Lang.h  Logger.h  ProcessManager.h  SessionHistory.h  SettingsDialog.h  Statistics.h  StatisticsPanel.h  StealthEngine.h  SteamArtFetcher.h  ThemeManager.h  UpdateChecker.h
resources/: style.qss
src/: Categories.cpp  CategoriesPanel.cpp  DllLoader.cpp  GameBrowser.cpp  Lang.cpp  ProcessManager.cpp  SessionHistory.cpp  SettingsDialog.cpp  Statistics.cpp  StatisticsPanel.cpp  StealthEngine.cpp  SteamArtFetcher.cpp  ThemeManager.cpp  UpdateChecker.cpp  ghost_launcher.cpp  main.cpp
themes/: Light.qss
